syntax = "proto3";
package pb;
option go_package = "internal/application/grpc/pb";

message PixRegistration {
    string kind = 1;
    string key = 2;
    string accountID = 3;
}

message PixKey {
    string id = 1;
    //string key = 2;
}

message Account {
    string accountID = 1;
    string accountNumber = 2;
    string bankID = 3;
    string bankName = 4;
    string ownerName = 5;
    string createdAt = 6;
}

message PixKeyInfo {
    string id = 1;
    string kind = 2;
    string key = 3;
    Account account = 4;
    string createdAt = 5;
}

message PixKeyCreatedResult {
    string id = 1;
    string status = 2;
    string error = 3;
}

service PixService {
    rpc RegisterPixKey(PixRegistration) returns (PixKeyCreatedResult) {}
    rpc Find(PixKey) returns (PixKeyInfo) {}
}